<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistActivity">
    
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/add_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:hint="@string/nome"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="370dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"
        android:inputType="textPassword"
        android:hint="@string/confirmar_password"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/registButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registar"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </androidx.cardview.widget.CardView>


    


</RelativeLayout>