<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/takenPicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/line">
    </ImageView>

    <androidx.cardview.widget.CardView
        android:id="@+id/takePicture"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tirar_foto"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/assuntoPonto"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:hint="@string/assunto" />

    <EditText
        android:id="@+id/descricaoPonto"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="370dp"
        android:hint="@string/descricao" />

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_ponto"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:background="@drawable/sample"
            android:text="Cancelar"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/confirm_ponto"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:background="@drawable/sample"
            android:text="Confirmar"
            android:textColor="@color/textColor"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
</RelativeLayout>